manifests/test/simple/routingrule2.yaml
apiVersion: config.istio.io/v1alpha2
kind: VirtualService
metadata:
  name: echosrv
spec:
  hosts:
    - echosrv
  http:
  - route:
    - destination:
        host: echosrv
        subset: v1
      weight: 50
    - destination:
        host: echosrv
        subset: v2
      weight: 50
