manifests/test/simple/values.yaml

#sidecarInjectorWebhook:
#  rewriteAppHTTPProbe: false

istio_cni:
  enabled: false

debug: INFO

version: ""

global:
  hub: gcr.io/istio-testing
  tag: latest

  imagePullPolicy: Always

  controlPlaneSecurityEnabled: false

  istioNamespace: istio-system
  trustDomain: ""

  #network: default
  # podDNSSearchNamespaces:

  sds:
    enabled: false
    # customTokenDirectory
    #useTrustworthyJwt: true


  proxy:
    privileged: true
    enableCoreDump: false
    image: proxyv2
    clusterDomain: "cluster.local"

    excludeInboundPorts: ""
    includeIPRanges: "*"
    excludeIPRanges: ""
    statusPort: 15020
    logLevel: ""
    readinessInitialDelaySeconds: 1
    readinessPeriodSeconds: 2
    readinessFailureThreshold: 10

    # resources
    componentLogLevel: "misc:error"


    tracer: "none"

    envoyStatsd:
      enabled: false



  proxy_init:
    image: proxyv2
